# learn_projects

./: README.md
arkTS/HealthyLife/: oh-package.json5  readme.md
arkTS/HealthyLife/AppScope/: app.json5
c/simu8051/: CMakeLists.txt  main.c  readme.md  simu8051.c  simu8051.h  simu8051_tools.c  simu8051_tools.h
c/simu8051/hex/: code01.hex
cpp/space_invaders/: .gitignore  CMakeLists.txt  README.md  main.cpp
crystal/crystal-blockchain/: LICENSE  README.md  shard.yml
crystal/crystal-blockchain/src/: Block.cr  crystal-blockchain.cr  test.http
csharp/MMO-SERVER/: .gitignore  MMO-SERVER.sln  README.md
csharp/MMO-SERVER/Common/: Singleton.cs
csharp/MMO-SERVER/GameServer/: Program.cs
csharp/unity/FrameworkDesign/: .gitignore  readme.md
csharp/wpf/: .gitignore
elixir/kv_umbrella/: .gitignore
elixir/kv_umbrella/config/: runtime.exs
go/distributed-crawler/: .gitignore  .golangci.yml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  main.go
go/socks5/: README.md  go.mod  server.go
go/three-kingdoms/: gateServer.go  go.mod  go.sum  loginServer.go  main.go  readme.txt  webServer.go
go/web-framework/: .gitignore  README.md  go.mod  go.sum  main.go
go/zinx/: main.go  readme.md
java/juejin-spring-middleware/: pom.xml  readme.md
java/leetcode/: .gitignore  README.md  pom.xml
java/lottery/: pom.xml  readme.md
java/payment/: .gitignore  pom.xml
javascript/own-react/: oeact.js  readme.md
kotlin/lite-cache/: build.gradle.kts  readme.md  settings.gradle.kts
php/MVCFramework/: admin.php  config.php  reademe.txt
python/simple-web-server/: client.py  flaskapp.py  main.py  pyramidapp.py  readme.md  requirements.txt  wsgiapp.py
ruby/bitcask/: .gitignore  .rubocop.yml  Gemfile  benchmark.rb  readme.md
ruby/blockchains/: .gitignore  block.rb  readme.md
ruby/depot/: .gitignore  README.md
rust/distributed-blog/: .gitignore  Cargo.toml  README.md  db.sql
rust/distributed-blog/blog-backend/: Cargo.toml
rust/distributed-blog/blog-backend/src/: main.rs  model.rs
rust/distributed-blog/blog-backend/src/form/: auth.rs  cate.rs  filter.rs  mod.rs
rust/distributed-blog/blog-backend/src/handler/: auth.rs  cate.rs  cookie.rs  mod.rs
rust/distributed-blog/blog-backend/src/middleware/: auth.rs
rust/distributed-blog/blog-backend/templates/: login.html
rust/distributed-blog/blog-backend/templates/cate/: add.htm  index.html
rust/distributed-blog/blog-proto/: Cargo.toml  build.rs
rust/distributed-blog/blog-proto/proto/: topic.proto
rust/distributed-blog/blog-proto/src/: pb.rs
rust/distributed-blog/topic-srv/: Cargo.toml
rust/distributed-blog/topic-srv/src/: main.rs  server.rs
rust/distributed-blog/topic-srv/tests/: topic_srv_test.rs
rust/rust-course/: .gitignore  README.md
rust/short-url/: .env  .gitignore  Cargo.toml  init.sql  readme.md
rust/short-url/src/: config.rs  core.rs  error.rs  form.rs  handler.rs  html.rs  main.rs  model.rs
rust/short-url/src/db/: mod.rs  url.rs
rust/short-url/src/types/: mod.rs
rust/short-url/templates/: base.html  index.html  msg.html  rank.html
rust/todo/: .env  .gitignore  Cargo.toml  init.sql  readme.md
rust/todo/src/: config.rs  error.rs  form.rs  main.rs  model.rs  response.rs
rust/todo/src/db/: mod.rs  todo_item.rs  todo_list.rs
rust/todo/src/handler/: mod.rs  todo_item.rs  todo_list.rs  usage.rs
scala/blockchains/: .gitignore  build.sbt
swift/SwiftyLISP/: Package.swift  readme.md
typescript/typespeed/: .gitignore  README.md  package.json
(+627 files in other folders)
