[package]
name = "short-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmur3 = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3.17"
axum = "0.3"
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
dotenv = "0.15"
config = "0.11"
deadpool-postgres = "0.9"
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
askama = "0.12.0"
tower-http = { version = "0.4.3", features = ["fs"] }
