[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3"
dotenv = "0.15.0"
config = "0.11.0"
serde = { version="1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.9"
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
