[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
axum = "0.5"
tera = "1"
serde = { version="1", features = ["derive"] }
chrono = "0.4"
blog-proto = {path="../blog-proto"}
blog-types = {path="../blog-types"}
blog-utils = {path="../blog-utils"}
blog-auth = {path="../blog-auth"}