[package]
name = "topic-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ,"chrono"] }
blog-proto = {path="../blog-proto"}
chrono = "0.4"